--- a/app/src/main/res/layout/weather_data_item.xml
+++ b/app/src/main/res/layout/weather_data_item.xml
@@ -18,14 +18,34 @@
             android:layout_margin="30dp">
 
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/temperature_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="18sp"
+                android:text="@string/temperature"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/temperature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@id/temperature_text"
+                app:layout_constraintTop_toTopOf="parent"/>
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/date_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@android:color/holo_blue_light"
+                android:textSize="18sp"
+                android:text="@string/date"
                 android:layout_marginTop="10dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toBottomOf="@id/temperature_text"/>
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/date"
@@ -33,9 +53,9 @@
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:textColor="@android:color/black"
-                android:layout_marginTop="6dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/temperature"/>
+                android:layout_marginTop="10dp"
+                app:layout_constraintStart_toEndOf="@id/date_text"
+                app:layout_constraintTop_toBottomOf="@id/temperature_text"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
